--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
+    "react-textarea-autosize": "^8.2.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
