--- a/package.json
+++ b/package.json
@@ -17,22 +17,17 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.6",
     "chart.js": "^2.9.4",
+    "clsx": "^1.1.1",
     "node-sass": "^4.14.1",
-<<<<<<< HEAD
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.10.1",
-=======
-    "clsx": "^1.1.1",
-    "react-chartjs-2": "^2.10.0",
->>>>>>> origin/main
     "react-router-dom": "^5.2.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react-scripts": "^3.4.4",
     "react-textarea-autosize": "^8.2.0",
-    "typescript": "^4.0.3",
-    "react-scripts": "^3.4.4"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
