--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.6",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "firebase": "^8.0.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
