--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/react-router-dom": "^5.1.6",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "firebase": "^8.0.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-hook-form": "^6.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
