--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
+    "firebase": "^8.1.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
