Updated package.json again

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "concurrently 'npm run script1' 'react-scripts test'",
+    "test": "npm run script1 && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
