--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "node"
+  - 14
 cache:
   directories:
   - node_modules
 script:
-  - npm test:jest
+  - npm test
   - npm run build
