--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
 node_js:
-  - 14
+  - node
 cache:
   directories:
   - node_modules
+before_install:
+  
 script:
   - npm test
   - npm run build
