--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ before_install:
 script:
   - npm test
   - npm run build
+
+branches:
+  only:
+    - feature_*
+
+after_success:
+  - ./travis_merge_script.sh
