--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ script:
   - npm test
   - npm run build
 
-branches:
-  only:
-    - feature_*
+# branches:
+#   only:
+#     - feature_*
 
-after_success:
-  - ./travis_merge_script.sh
+# after_success:
+#   - ./travis_merge_script.sh
   
