--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
+    "react-popper-tooltip": "^3.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-split": "^2.0.9",
