--- a/package.json
+++ b/package.json
@@ -14,21 +14,26 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
-    "firebase": "^8.1.1",
+    "firebase": "^8.1.2",
     "html-to-react": "^1.4.5",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-split": "^2.0.9",
     "react-textarea-autosize": "^8.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
