--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
-    "firebase": "^8.1.1",
+    "firebase": "^8.1.2",
     "html-to-react": "^1.4.5",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -29,6 +29,7 @@
     "react-scripts": "^3.4.4",
     "react-split": "^2.0.9",
     "react-textarea-autosize": "^8.2.0",
+    "reactfire": "^3.0.0-rc.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
